--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Phi Khi"
+            "name": "phikhi"
         }
     ],
     "minimum-stability": "stable",
