--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ env:
     - COMPOSER_FLAGS=""
 
 before_script:
-  - travis_retry composer update ${COMPOSER_FLAGS}
+  - travis_retry composer self-update
+  - travis_retry composer update ${COMPOSER_FLAGS} --no-interaction --prefer-source
 
 script:
   - vendor/bin/phpunit
