--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,18 +1,9 @@
-build:
-  nodes:
-    coverage:
-      tests:
-        override:
-          - command: "./vendor/bin/phpunit --coverage-clover=coverage.clover"
-            coverage:
-              file: logs/clover.xml
-              format: clover
-
 filter:
     excluded_paths: [tests/*]
 
 checks:
     php:
+        code_rating: true
         remove_extra_empty_lines: true
         remove_php_closing_tag: true
         remove_trailing_whitespace: true
@@ -27,3 +18,7 @@ checks:
         fix_identation_4spaces: true
         fix_doc_comments: true
 
+tools:
+    external_code_coverage:
+        timeout: 600
+        runs: 3
